# diy-sdvx-con

./: .gitignore  .gitmodules  Cargo.toml  README.md  memory.x  sdvx_controller.arcade.json  sdvx_controller.kbm.json  sdvx_controller.ksm.json  via.json
.cargo/: config.toml
crates/filter/: Cargo.toml
crates/filter/src/: button.rs  knob.rs  lib.rs
crates/keycode/: Cargo.toml  build.rs
crates/keycode-gen/: Cargo.toml
crates/keycode-gen/src/: def.rs  lib.rs
crates/keycode/src/: lib.rs
firmware/: Cargo.toml  via.json
firmware/.cargo/: config.toml
firmware/src/: input.rs  keycodes.rs  led.rs  logger.rs  main.rs  usb.rs  userdata.rs  via.rs
firmware/src/input/: builder.rs  config.rs  key.rs  reader.rs  report.rs  state.rs  ticker.rs  writer.rs
firmware/src/input/key/: builder.rs
firmware/src/input/reader/: button.rs  knob.rs
firmware/src/usb/: config.rs  eac.rs  hid.rs
firmware/src/userdata/: keymap.rs
firmware/src/via/: cmds.rs  custom.rs  encoder.rs  keyboard.rs  keymap.rs
keycode-gen/: Cargo.toml
keycodes/: Cargo.toml
pcb/: sdvx-con.kicad_pcb  sdvx-con.kicad_prl  sdvx-con.kicad_pro  sdvx-con.kicad_sch
src/: config.rs  gamepad.rs  input.rs  keycode.rs  led.rs  logger.rs  main.rs  storage.rs  usb.rs  userdata.rs  via.rs
src/input/: config.rs  debouncer.rs  reader.rs  state.rs
src/usb/: config.rs  hid.rs
src/userdata/: io.rs  keymap.rs
src/via/: custom.rs  encoder.rs  keyboard.rs  keymap.rs
xtask/: Cargo.toml
xtask/src/: main.rs
