[package]
name = "firmware"
authors = ["storycraft <storycraft@pancake.sh>"]
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true

[dependencies]
embedded-hal = "1.0.0"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

embassy-rp = { version = "0.9.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-usb = { version = "0.5.1", features = ["defmt"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-usb-logger = "0.5.1"
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }

defmt = "1.0.1"
panic-halt = "1.0.0"
log = { version = "0.4.29", features = ["release_max_level_info"] }
critical-section = "1.2.0"
defmt-rtt = "1.1.0"
usbd-hid = { version = "0.8.2", features = ["defmt"] }

[package.metadata.embassy]
build = [
  { target = "thumbv8m.main-none-eabihf", artifact-dir = "out/examples/rp235x" },
]
