[package]
name = "firmware"
authors = ["storycraft <storycraft@pancake.sh>"]
publish = false
version = "0.1.0"
edition = "2024"
license = "GPL-2.0"

[dependencies]
embedded-hal = "1.0.0"

cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7.5"

embassy-rp = { version = "0.9.0", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }
embassy-executor = { version = "0.9.1", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
# interface and handlers for Serial, Via, Gamepad, Mouse, Keyboard, Media Control
embassy-usb = { version = "0.5.1", features = ["defmt", "max-interface-count-7", "max-handler-count-6"] }
embassy-futures = { version = "0.1.2", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }

defmt = "1.0.1"
panic-halt = "1.0.0"
critical-section = "1.2.0"
usbd-hid = { version = "0.8.2", features = ["defmt"] }
static_cell = "2.1.1"
zerocopy = { version = "0.8.31", features = ["derive"] }
scopeguard = { version = "1.2.0", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
num-derive = { version = "0.4.2", default-features = false }
defmt-embassy-usbserial = "0.2.1"
